Remove "Section Heading"

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -19,7 +19,7 @@
 
     <main class="main" role="main">
       <section id="website">
-        <h1 class="section-heading">このウェブサイトについて</h1>
+        <h1>このウェブサイトについて</h1>
 
         <footer class="section-footer">
           <p>Informations, for humans</p>
@@ -56,7 +56,7 @@
         <link href="/about/" itemprop="url">
         <link href="mailto:kyo@hail2u.net" itemprop="email">
 
-        <h1 class="section-heading"><span itemprop="name">Kyo Nagashima</span>について</h1>
+        <h1><span itemprop="name">Kyo Nagashima</span>について</h1>
 
         <figure>
           <img alt="This Is the End" src="http://www.gravatar.com/avatar/38b5f9f7d2faa315ec10866e18fc3bd7.png?s=320" itemprop="image">
@@ -79,7 +79,7 @@
       </section>
 
       <section id="colophon">
-        <h1 class="section-heading">奥付け</h1>
+        <h1>奥付け</h1>
 
         <p>その他、ウェブページの構成やツール、プライバシーについては以下を参照してください。</p>
 
@@ -129,7 +129,7 @@
       </section>
 
       <section id="contact">
-        <h1 class="section-heading">問い合わせ</h1>
+        <h1>問い合わせ</h1>
 
         <p>このWebサイト内のコンテンツについて、報告や問い合わせ・クレーム等がある場合は以下のいずれかの手段で連絡してください。</p>
 
