--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -19,7 +19,7 @@
 
     <main class="main" role="main">
       <section id="by-category">
-        <h1 class="section-heading">カテゴリ別</h1>
+        <h1>カテゴリ別</h1>
 
         <footer class="section-footer">
           <p>Organized by categories</p>
@@ -46,7 +46,7 @@
       {{#articles}}
         {{#isFirstInYear}}
           <section id="on-{{year}}" class="post-list">
-            <h1 class="section-heading">{{year}}年の記事</h1>
+            <h1>{{year}}年の記事</h1>
 
             <ol>
         {{/isFirstInYear}}
