--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -19,7 +19,7 @@
 
     <main class="main" role="main">
       <section>
-        <h1 class="section-heading"><a href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></h1>
+        <h1><a href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></h1>
 
         <footer class="section-footer">
           <p>The All-inclusive Guide?</p>
@@ -31,199 +31,199 @@
       {{> google-adsense__ad-main}}
 
       <section>
-        <h1 class="section-heading"><a href="/documents/sass-guide-ja.html">Sassの基本</a></h1>
+        <h1><a href="/documents/sass-guide-ja.html">Sassの基本</a></h1>
 
         <p><a href="http://sass-lang.com/">Sass</a>がリニューアルされ、このサイトに訳を載せていたチュートリアルが消え、代わりに<a href="http://sass-lang.com/guide">Sass Basics</a>になりました。内容的にはあまり変わらないか多少薄くなっていますが、<code>@extend</code>への言及も追加されたので、日本語訳を作成しました。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/css-postprocessor-era.html">CSSポストプロセッサー時代の到来</a></h1>
+        <h1><a href="/documents/css-postprocessor-era.html">CSSポストプロセッサー時代の到来</a></h1>
 
         <p>市民権を得たCSSプリプロセッサーでは開発という段階しかカバーすることは出来ません。レビューとリリースという必要な段階を効率よく確実に行うためには、CSSポストプロセッサーという名前で総称されることになるであろうツールたちをうまく使う必要が出てくるでしょう。CSSポストプロセッサーとはどういうものなのか、そしてどういう働きをするものなのか、更にはどういう効果を持つのか、この文書で説明するこれらの点を理解して適切に使う必要があるでしょう。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/cutting-down-on-vendor-prefixes.html">ベンダー拡張プリフィックスヲ削減セヨ</a></h1>
+        <h1><a href="/documents/cutting-down-on-vendor-prefixes.html">ベンダー拡張プリフィックスヲ削減セヨ</a></h1>
 
         <p>ベンダー拡張プリフィックスを、サポート状況に照らし合わせて、必要ないのなら削除しようという<a href="http://www.456bereastreet.com/archive/201311/cutting_down_on_vendor_prefixes/">Cutting down on vendor prefixes</a>の日本語訳です。CSSプリプロセッサーにより、「ベンダー拡張プリフィックスをとりあえず付けとけ」というような風潮が広まってしまったのは残念なことです。かといって単に使わなければ良いということでもないので、こういった実例を参考に考えてみる時期なのではないかと思います。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/think-of-the-beginners.html">初心者のことを考えよう</a></h1>
+        <h1><a href="/documents/think-of-the-beginners.html">初心者のことを考えよう</a></h1>
 
         <p>自身のプロダクトを初心者の目で見つめなおすことの大切さについてさらりと書かれた<a href="http://blog.capwatkins.com/think-of-the-beginners">Think of the Beginners</a>の日本語訳です。熟練者であることを忘れることはとても難しいですが、必ず初心者の立場でおさらいすることは心がけたいですね。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/favicon-cheat-sheet-ja.html">ファビコン・カンニング・ペーパー</a></h1>
+        <h1><a href="/documents/favicon-cheat-sheet-ja.html">ファビコン・カンニング・ペーパー</a></h1>
 
         <p>いつの間にやらとんでもない数の種類の亜種が湧いて出てきたファビコンの全般的な解説である<a href="https://github.com/audreyr/favicon-cheat-sheet">favicon-cheat-sheet</a>の日本語訳です。iOS 7でまた少し変わったりといろいろややこしい世界なので、一度ちゃんと総ざらいしておいた方が良さそうですね。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/what-should-you-say-when-your-app-goes-down.html">あなたのサービスが落ちた時にユーザーになんと言うべきでしょうか？</a></h1>
+        <h1><a href="/documents/what-should-you-say-when-your-app-goes-down.html">あなたのサービスが落ちた時にユーザーになんと言うべきでしょうか？</a></h1>
 
         <p>サービスがダウンした時にユーザーにどうすばやく通知するかについて簡単にまとめられていた<a href="http://davidmckinney.com/blog/2013/8/26/what-should-you-say-when-your-app-goes-down">What should you tell your users when your service is down?</a>の日本語訳です。頭ではわかっていても実践には結びつくことがあまりないかもしれないですね。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/html-img-alt.html">HTMLにおけるimg要素のalt属性</a></h1>
+        <h1><a href="/documents/html-img-alt.html">HTMLにおけるimg要素のalt属性</a></h1>
 
         <p><a href="http://www.whatwg.org/specs/web-apps/current-work/multipage/">HTML Standard</a>の<code>img</code>要素の<code>alt</code>属性についてのガイドである<a href="http://www.whatwg.org/specs/web-apps/current-work/multipage/embedded-content-1.html#alt">4.8.1.1 Requirements for providing text to act as an alternative for images</a>をざっと把握できるように日本語で箇条書きにしたものです。これで全容をアバウトに把握してから原文を読むとより理解しやすくなると思います。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/translation-is-easy-really.html">翻訳は簡単だよ、本当に</a></h1>
+        <h1><a href="/documents/translation-is-easy-really.html">翻訳は簡単だよ、本当に</a></h1>
 
         <p>翻訳の簡単なコツについて実体験を交えたエッセイ<a href="https://medium.com/education-today/510964531b56">Translation is easy, really</a>という記事の日本語訳です。翻訳は簡単……とまでは思わないけど、あまり肩肘張らずにこういう感じでやると楽しくやれると思います。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/style-repository.html">スタイル・リポジトリ</a></h1>
+        <h1><a href="/documents/style-repository.html">スタイル・リポジトリ</a></h1>
 
         <p><a href="http://daneden.me/max-css/">Max CSS</a>という圧縮済みのCSSファイルだけではなく圧縮する前のCSSファイルも公開してくれないか？という趣旨のオープンレターに対しての僕なりの返答です。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/rdfa-lite-20120607.html">抄訳 RDFa Lite 1.1</a></h1>
+        <h1><a href="/documents/rdfa-lite-20120607.html">抄訳 RDFa Lite 1.1</a></h1>
 
         <p><a href="https://www.facebook.com/">Facebook</a>の<a href="http://ogp.me/">OGP</a>で利用されていることから急速に普及した<a href="http://www.w3.org/TR/rdfa-syntax/">RDFa</a>のサブセットである<a href="http://www.w3.org/TR/rdfa-lite/">RDFa Lite</a>の抄訳です。スーパーセットであるRDFaを始め、簡便さで一日の長がある<a href="http://microformats.org/about">Microformats</a>、HTML仕様と密接な関わりを持つ<a href="http://www.w3.org/TR/microdata/">Microdata</a>を敵に回してますが、セマンティック王座に最も近い位置にいるんじゃないかと思っています。その王座に意味があるのかは知らないですけど。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/learn-you-a-flexbox-for-great-good.html">Flexbox、おもしろいですよ？</a></h1>
+        <h1><a href="/documents/learn-you-a-flexbox-for-great-good.html">Flexbox、おもしろいですよ？</a></h1>
 
         <p>先ごろその仕様が一新された<a href="http://www.w3.org/TR/css3-flexbox/">CSS Flexible Box Layout Module</a>の基礎知識を解説した<a href="http://www.the-haystack.com/2012/01/04/learn-you-a-flexbox/">Learn You a Flexbox for Great Good!</a>の日本語訳です。FlexboxはいくつかあるCSSのレイアウト・モジュールの一つで、悩んだり困ったりすることが多いフォーム部品のレイアウトに大いに役立ちそうなもので、この日本語訳では簡単なサンプルをいじりつつ段階的に覚えられる形になっています。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/ala-getting-started-with-sass.html">Sassで行こう！</a></h1>
+        <h1><a href="/documents/ala-getting-started-with-sass.html">Sassで行こう！</a></h1>
 
         <p><a href="http://www.alistapart.com/">A List Apart</a>の2011年の記事である<a href="http://www.alistapart.com/articles/getting-started-with-sass/">Getting Started with Sass</a>という<a href="http://sass-lang.com/">Sass</a>の入門記事の日本語訳です。Sassや<a href="http://lesscss.org/">LESS</a>などのCSSメタ言語は急速に広まりつつあります。その学習の手始めとしてどうでしょうか？</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/ala-whitespace.html">余白の美</a></h1>
+        <h1><a href="/documents/ala-whitespace.html">余白の美</a></h1>
 
         <p><a href="http://www.alistapart.com/">A List Apart</a>の2007年の記事である<a href="http://www.alistapart.com/articles/whitespace/">Whitespace</a>という余白の大切さを説いた記事の日本語訳です。短い記事ということもあり実践的なものではありませんが、Webフォント時代に突入した2011年において、余白をうまく取ることの重要性は飛躍的に上がっていると思うので、なかなか興味深い記事だと思います。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/sass-tutorial.html">Sass - チュートリアル</a></h1>
+        <h1><a href="/documents/sass-tutorial.html">Sass - チュートリアル</a></h1>
 
         <p><a href="http://sass-lang.com/">Sass公式サイト</a>の<a href="http://sass-lang.com/tutorial.html">チュートリアル</a>の日本語訳です。インストールから使い方がひと通り解説されています。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/sass-and-sassy-css.html">Sass、そしてSassy CSS (SCSS)</a></h1>
+        <h1><a href="/documents/sass-and-sassy-css.html">Sass、そしてSassy CSS (SCSS)</a></h1>
 
         <p>CSSを拡張したメタ言語である<a href="http://sass-lang.com/">Sass</a>、そしてその別文法として定義されたSCSSについて、960.gsなどのCSSフレームワークを引き合いにしてざっと解説した文書です。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/diveintohtml5-semantics.html">結局どうすればいいの？ - Dive Into HTML5</a></h1>
+        <h1><a href="/documents/diveintohtml5-semantics.html">結局どうすればいいの？ - Dive Into HTML5</a></h1>
 
         <p><a href="http://diveintohtml5.info/">Dive Into HTML5</a>のコンテンツの一つである、HTML 4からHTML5への移行を題材としてHTML5の書き方や新しい要素などを説明した<a href="http://diveintohtml5.info/semantics.html">What Does It All Mean?</a>の日本語訳です。HTML5に対応していないInternet Explorer 8以前への対策の仕方やなぜ<code>&lt;meta charset=&quot;UTF-8&quot;&gt;</code>という一見互換性がなさそうな文字エンコーティングの指定法になったかなどが説明されています。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/adding-meaning-to-your-http-error-pages.html">HTTPエラーページに意味を持たせよう</a></h1>
+        <h1><a href="/documents/adding-meaning-to-your-http-error-pages.html">HTTPエラーページに意味を持たせよう</a></h1>
 
         <p><a href="http://dev.opera.com/articles/view/adding-meaning-to-http-error-pages/">Adding meaning to your HTTP error pages!</a>の日本語訳で、より訪問者にやさしく効果的なエラードキュメントを作成する方法の解説です。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/git-cheat-sheets-jp.html">Git Cheat Sheets JP</a></h1>
+        <h1><a href="/documents/git-cheat-sheets-jp.html">Git Cheat Sheets JP</a></h1>
 
         <p>いくつかの<a href="http://git-scm.com/">Git</a>コマンド解説ページを元に作成した、簡単な日本語の注釈付きのチート・シートです。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/version-control-for-designers.html">Version Control for Designers</a></h1>
+        <h1><a href="/documents/version-control-for-designers.html">Version Control for Designers</a></h1>
 
         <p><a href="http://hoth.entp.com/output/git_for_designers.html">Version Control for Designers</a>の日本語訳です。少し前に<a href="http://git-scm.com/">Git</a>を使い始めた時に読んだドキュメントのひとつ。Git入門というよりもGitを例にしてバージョン管理システムを解説しているというほうが近いけど、Gitの基本的な使い方(例えばリモートのリポジトリを削除する方法など)についてもそこそこ説明があります。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/sortable-pokemon-list.html">ソート機能付き ポケモン一覧表</a></h1>
+        <h1><a href="/documents/sortable-pokemon-list.html">ソート機能付き ポケモン一覧表</a></h1>
 
         <p><a href="http://www.pokemon.co.jp/">ポケットモンスター</a> <a href="http://www.amazon.co.jp/%E4%BB%BB%E5%A4%A9%E5%A0%82-13306241-237839011-%E3%83%9D%E3%82%B1%E3%83%83%E3%83%88%E3%83%A2%E3%83%B3%E3%82%B9%E3%82%BF%E3%83%BC-%E3%83%80%E3%82%A4%E3%83%A4%E3%83%A2%E3%83%B3%E3%83%89/dp/B000HIDYOY%3FSubscriptionId%3D08PWFCAAQ5TZJT30SKG2%26tag%3Dhail2unet-22%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3DB000HIDYOY">ダイヤモンド</a>・<a href="http://www.amazon.co.jp/%E4%BB%BB%E5%A4%A9%E5%A0%82-13306241-237839011-%E3%83%9D%E3%82%B1%E3%83%83%E3%83%88%E3%83%A2%E3%83%B3%E3%82%B9%E3%82%BF%E3%83%BC-%E7%89%B9%E5%85%B8%E3%81%AA%E3%81%97/dp/B000HIG33I%3FSubscriptionId%3D08PWFCAAQ5TZJT30SKG2%26tag%3Dhail2unet-22%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3DB000HIG33I">パール</a>のポケモンの一覧表。HP・こうげき・ぼうぎょ・とくこう・とくぼう等でソートして、そこそこ能力はありそうだけどマイナーなポケモンを探すために。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/atom02spec.html">Atom 0.2 Spec日本語 HTML 版</a></h1>
+        <h1><a href="/documents/atom02spec.html">Atom 0.2 Spec日本語 HTML 版</a></h1>
 
         <p><a href="http://www.intertwingly.net/wiki/pie/">Atom</a>の<a href="http://diveintomark.org/public/2003/08/atom02spec.txt">Informal 0.2 spec</a>をHTML化して、日本語に意訳したものです。正確性に欠きますので、Atomってこんなものなのかという概要をつかめる程度のものです。きちんと知りたい場合は、本家のWikiを熟読しましょう。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/rss20notes.html">RSS 2.0 Notes</a></h1>
+        <h1><a href="/documents/rss20notes.html">RSS 2.0 Notes</a></h1>
 
         <p>我らがDave Winerの<a href="http://blogs.law.harvard.edu/tech/rss">RSS 2.0 Specification</a>を元に、備忘録的にRSS 2.0の各要素を説明したような気がする何かです。構造的にはとってもシンプルでステキ。一方で(以下略。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/opml_spec.html">OPML 1.0 Specificationの勝手な日本語訳</a></h1>
+        <h1><a href="/documents/opml_spec.html">OPML 1.0 Specificationの勝手な日本語訳</a></h1>
 
         <p><a href="http://www.opml.org/spec">OPML 1.0 Specification</a>の適当かつ勝手な日本語訳です。流行るかもしれないので先行投資。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/about-rss.html">RSSについて</a></h1>
+        <h1><a href="/documents/about-rss.html">RSSについて</a></h1>
 
         <p>過去の遺物ですが消すのはもったいない気もするので移動させました。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/cairs.html">Complex @import rules</a></h1>
+        <h1><a href="/documents/cairs.html">Complex @import rules</a></h1>
 
         <p>僕のうろ覚えの記憶から捏造した、WindowsとMac OSのメジャーなブラウザそれぞれで、どのような<a href="http://www.w3.org/TR/REC-CSS2/cascade.html#at-import">@importルール</a>の記述法をサポートしているのかを○×でまとめた表です。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/216colors.html">216 cross platform colors table</a></h1>
+        <h1><a href="/documents/216colors.html">216 cross platform colors table</a></h1>
 
         <p>比較的、気軽に使っちゃっても良いんじゃないかな？という、216色の16進数カラーコード一覧です。いまやこだわる必要性はほとんど無いと思われますが、RGBのHEX値と色の関連性を把握するのに利用できると思われます。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/css2pt.html">CSS2 property table</a></h1>
+        <h1><a href="/documents/css2pt.html">CSS2 property table</a></h1>
 
         <p><a href="http://www.w3.org/TR/REC-CSS2/">CSS2 Specification</a>を元に作った、備忘録程度のシンプルなCSS2のプロパティの表です。つづりを忘れた時とか、特定の文字列で値を指定するタイプの物を使う時、その文字列を思い出す時とか……。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/opjsdom.html">Support for JavaScript and JScript Objects in Opera</a></h1>
+        <h1><a href="/documents/opjsdom.html">Support for JavaScript and JScript Objects in Opera</a></h1>
 
         <p><a href="http://www.opera.com/docs/specs/js/">Web Specifications Supported in Opera - JavaScript</a>を元に作った、OperaのJavaScript, JScript, DOMのサポート状況の一覧です。Operaはきちんとしたブラウザであることが良くわかる。それと使い勝手が良いかどうかはまた別の話で。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/ps_sketchpbyp.html">Sketch photo by pencil in Photoshop 7</a></h1>
+        <h1><a href="/documents/ps_sketchpbyp.html">Sketch photo by pencil in Photoshop 7</a></h1>
 
         <p>写真を無理やり鉛筆でスケッチした感じに仕上げる方法です。写真のアウトラインの抽出などにも応用できます。この処理をきつめに仕上げた後で、シャープネスかけたり。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/css2bsi.html">CSS2 browser support information</a></h1>
+        <h1><a href="/documents/css2bsi.html">CSS2 browser support information</a></h1>
 
         <p>当てにならない僕の記憶とGoogleで拾い集めた情報から作った、各ブラウザの<a href="http://www.w3.org/TR/REC-CSS2/">CSS2</a>サポート情報です。○△×はほとんど主観によってつけているので、参考程度に。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/httpstatus.html">HTTP status message list</a></h1>
+        <h1><a href="/documents/httpstatus.html">HTTP status message list</a></h1>
 
         <p>なにかの拍子にブラウザに表示されたりするHTTPステータスメッセージの一覧です。知らなくても気にならない。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/ps_lightning.html">Draw lightning in Photoshop 7</a></h1>
+        <h1><a href="/documents/ps_lightning.html">Draw lightning in Photoshop 7</a></h1>
 
         <p>ひょんなことから教えてもらった、Photoshop 7で雷を簡単に描いてしまう方法です。直感的に描く方法でないこういうものは、応用は効きにくいですけど、便利っていやぁ便利。</p>
       </section>
 
       <section>
-        <h1 class="section-heading"><a href="/documents/entities.html">Character entities table</a></h1>
+        <h1><a href="/documents/entities.html">Character entities table</a></h1>
 
         <p><a href="http://www.w3.org/TR/REC-html40/sgml/entities.html">Character entity references in HTML 4</a>を元にした、文字参照の表というか、単なる羅列です。フォントによっては表示されなかったりします。Arial Unicode MSなどのこれらのグリフをカバーしているしているフォントの場合は、表示されることでしょう。</p>
       </section>
