--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -53,7 +53,7 @@
       {{/articles}}
 
       <section id="recent-updates" class="post-list">
-        <h1 class="section-heading">お知らせ</h1>
+        <h1>お知らせ</h1>
 
         {{#updates}}
           <ol>
@@ -66,7 +66,7 @@
       </section>
 
       <section id="subscribe-links">
-        <h1 class="section-heading">購読</h1>
+        <h1>購読</h1>
 
         <ul class="icon-list">
           <li><a href="https://twitter.com/hail2unet"><img alt="Twitter" src="../../images/icon/twitter.min.svg"></a></li>
