--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -54,7 +54,7 @@
     <main class="main" <?$permalink::is_permalink ne="1"> role="main"</?>>
       <?$categories::enabled eq="1">
         <section class="post-list">
-          <h1 class="section-heading">“$categories::title”についての記事</h1>
+          <h1>“$categories::title”についての記事</h1>
 
           <footer class="section-footer">
             <p>What I wrote about “$categories::title”</p>
