Add "First Heading"

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -19,7 +19,7 @@
 
     <main class="main" role="main">
       <section id="website">
-        <h1>このウェブサイトについて</h1>
+        <h1 class="first-heading">このウェブサイトについて</h1>
 
         <footer class="section-footer">
           <p>Informations, for humans</p>
