--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -19,10 +19,10 @@
 
     <main class="main" role="main">
       <section id="by-category">
-        <h1>カテゴリ別</h1>
+        <h1 class="first-heading">カテゴリ別</h1>
 
         <footer class="section-footer">
-          <p>Organized by categories</p>
+          <p>What I talking about</p>
         </footer>
 
         <ul class="flat-ul">
