--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -54,7 +54,7 @@
     <main class="main" <?$permalink::is_permalink ne="1"> role="main"</?>>
       <?$categories::enabled eq="1">
         <section class="post-list">
-          <h1>“$categories::title”についての記事</h1>
+          <h1 class="first-heading">“$categories::title”についての記事</h1>
 
           <footer class="section-footer">
             <p>What I wrote about “$categories::title”</p>
@@ -70,7 +70,7 @@
         <?$utils::has_image ne="1"><meta content="{{image}}" itemprop="image"></?>
         <link href="$url$path/$fn.$default_flavour" itemprop="url">
 
-        <h1 class="article-heading" itemprop="name">$title</h1>
+        <h1 class="article-heading first-heading" itemprop="name">$title</h1>
 
         <footer class="article-footer">
           <p>on <time datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00" itemprop="datePublished">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
