--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -19,7 +19,7 @@
 
     <main class="main" role="main">
       <section>
-        <h1><a href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></h1>
+        <h1 class="first-heading"><a href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></h1>
 
         <footer class="section-footer">
           <p>The All-inclusive Guide?</p>
