--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -22,7 +22,7 @@
         <section id="latest-article" class="topic">
           {{#first}}
             <a href="{{link}}">
-              <h1>{{{title}}}</h1>
+              <h1 class="first-heading">{{{title}}}</h1>
 
               <footer class="section-footer">
                 <p>on <time datetime="{{html5PubDate}}">{{strPubDate}}</time>
