--- a/src/html/projects/index.mustache
+++ b/src/html/projects/index.mustache
@@ -19,7 +19,7 @@
 
     <main class="main" role="main">
       <section>
-        <h1><a href="https://github.com/hail2u/grunt-rsync-ac">rsync-ac (Gruntプラグイン)</a></h1>
+        <h1 class="first-heading"><a href="https://github.com/hail2u/grunt-rsync-ac">rsync-ac (Gruntプラグイン)</a></h1>
 
         <footer class="section-footer">
           <p>$ rsync -aC --exclude-from=.rsyncignore</p>
