--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -70,9 +70,9 @@
         <?$utils::has_image ne="1"><meta content="{{image}}" itemprop="image"></?>
         <link href="$url$path/$fn.$default_flavour" itemprop="url">
 
-        <h1 class="article-heading first-heading" itemprop="name">$title</h1>
+        <h1 class="first-heading" itemprop="name">$title</h1>
 
-        <footer class="article-footer">
+        <footer class="section-footer">
           <p>on <time datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00" itemprop="datePublished">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
             under <span class="tag" itemprop="keywords"><a href="$url$path/">$categories::name</a></span></p>
         </footer>
