Lint and build web font CSS

--- a/fonts/source-code-pro.css
+++ b/fonts/source-code-pro.css
@@ -8,37 +8,37 @@
  * This Font Software is licensed under the SIL Open Font License, Version 1.1.
  */
 @font-face {
-  font-family: "Source Code Pro";
+  font-family: 'Source Code Pro';
   font-style: normal;
   font-weight: 200;
-  src: local("Source Code Pro ExtraLight"), url("./source-code-pro/r.woff") format("woff"); }
+  src: local("Source Code Pro ExtraLight"), url("./source-code-pro/xl.woff") format("woff"); }
 @font-face {
-  font-family: "Source Code Pro";
+  font-family: 'Source Code Pro';
   font-style: normal;
   font-weight: 300;
-  src: local("Source Code Pro Light"), url("./source-code-pro/r.woff") format("woff"); }
+  src: local("Source Code Pro Light"), url("./source-code-pro/l.woff") format("woff"); }
 @font-face {
-  font-family: "Source Code Pro";
+  font-family: 'Source Code Pro';
   font-style: normal;
   font-weight: 400;
   src: local("Source Code Pro"), url("./source-code-pro/r.woff") format("woff"); }
 @font-face {
-  font-family: "Source Code Pro";
+  font-family: 'Source Code Pro';
   font-style: normal;
   font-weight: 500;
-  src: local("Source Code Pro Medium"), url("./source-code-pro/r.woff") format("woff"); }
+  src: local("Source Code Pro Medium"), url("./source-code-pro/m.woff") format("woff"); }
 @font-face {
-  font-family: "Source Code Pro";
+  font-family: 'Source Code Pro';
   font-style: normal;
   font-weight: 600;
-  src: local("Source Code Pro SemiBold"), url("./source-code-pro/r.woff") format("woff"); }
+  src: local("Source Code Pro SemiBold"), url("./source-code-pro/sb.woff") format("woff"); }
 @font-face {
-  font-family: "Source Code Pro";
+  font-family: 'Source Code Pro';
   font-style: normal;
   font-weight: 700;
   src: local("Source Code Pro Bold"), url("./source-code-pro/b.woff") format("woff"); }
 @font-face {
-  font-family: "Source Code Pro";
+  font-family: 'Source Code Pro';
   font-style: normal;
   font-weight: 900;
-  src: local("Source Code Pro Black"), url("./source-code-pro/b.woff") format("woff"); }
+  src: local("Source Code Pro Black"), url("./source-code-pro/bk.woff") format("woff"); }
