--- a/fonts/megrim.css
+++ b/fonts/megrim.css
@@ -6,7 +6,7 @@
  * This Font Software is licensed under the SIL Open Font License, Version 1.1.
  */
 @font-face {
-  font-family: "Megrim";
+  font-family: 'Megrim';
   font-style: normal;
   font-weight: 400;
   src: url("./megrim/r-26.woff") format("woff"); }
