--- a/fonts/source-serif-pro.css
+++ b/fonts/source-serif-pro.css
@@ -8,17 +8,17 @@
  * This Font Software is licensed under the SIL Open Font License, Version 1.1.
  */
 @font-face {
-  font-family: "Source Serif Pro";
+  font-family: 'Source Serif Pro';
   font-style: normal;
   font-weight: 400;
   src: local("Source Serif Pro"), url("../fonts/source-serif-pro/r.woff") format("woff"); }
 @font-face {
-  font-family: "Source Serif Pro";
+  font-family: 'Source Serif Pro';
   font-style: normal;
   font-weight: 600;
   src: local("Source Serif Pro SemiBold"), url("../fonts/source-serif-pro/b.woff") format("woff"); }
 @font-face {
-  font-family: "Source Serif Pro";
+  font-family: 'Source Serif Pro';
   font-style: normal;
   font-weight: 700;
   src: local("Source Serif Pro Bold"), url("../fonts/source-serif-pro/b.woff") format("woff"); }
