--- a/fonts/source-serif-pro.css
+++ b/fonts/source-serif-pro.css
@@ -10,6 +10,16 @@
 @font-face {
   font-family: 'Source Serif Pro';
   font-style: normal;
+  font-weight: 200;
+  src: local("Source Serif Pro ExtraLight"), url("../fonts/source-serif-pro/xl.woff") format("woff"); }
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Source Serif Pro Light"), url("../fonts/source-serif-pro/l.woff") format("woff"); }
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: normal;
   font-weight: 400;
   src: local("Source Serif Pro"), url("../fonts/source-serif-pro/r.woff") format("woff"); }
 @font-face {
@@ -22,3 +32,8 @@
   font-style: normal;
   font-weight: 700;
   src: local("Source Serif Pro Bold"), url("../fonts/source-serif-pro/b.woff") format("woff"); }
+@font-face {
+  font-family: 'Source Serif Pro';
+  font-style: normal;
+  font-weight: 900;
+  src: local("Source Serif Pro Black"), url("../fonts/source-serif-pro/bk.woff") format("woff"); }
