Add social links to global footer

--- a/src/html/partial/global-footer.mustache
+++ b/src/html/partial/global-footer.mustache
@@ -2,6 +2,9 @@
   <section class="footlinks">
     <ul>
       <li><a href="{{license_url}}" rel="license">CC BY-NC</a></li>
+      <li><a href="https://twitter.com/hail2unet">Twitter</a></li>
+      <li><a href="https://www.facebook.com/hail2u.net">Facebook</a></li>
+      <li><a href="http://u2liah.tumblr.com/">Tumblr</a></li>
       <li><a href="{{feed_url}}" rel="alternate" type="application/rss+xml">RSS</a></li>
     </ul>
   </section>
