Separate profile page to new domain

--- a/src/html/partial/global-footer.mustache
+++ b/src/html/partial/global-footer.mustache
@@ -9,6 +9,5 @@
     </ul>
   </section>
 
-  {{#about}}<p class="byline">Made by <mark>Kyo Nagashima</mark>.</p>{{/about}}
-  {{^about}}<p id="author" class="byline" itemprop="author" itemscope itemtype="http://schema.org/Person">Made by <span itemprop="name"><a href="/about/" rel="author" itemprop="url">Kyo Nagashima</a></span>.</p>{{/about}}
+  <p id="author" class="byline" itemprop="author" itemscope itemtype="http://schema.org/Person">Made by <span itemprop="name"><a href="https://kyonagashima.com/" rel="author" itemprop="url">Kyo Nagashima</a></span>.</p>
 </footer>
