--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -1,5 +1,5 @@
 <link href="{{feed_url}}" rel="alternate" type="application/rss+xml">
-<link href="/about/" rel="author">
+<link href="https://kyonagashima.com/" rel="author">
 {{^notfound}}<link href="{{canonical}}" rel="canonical">{{/notfound}}
 <link href="{{license_url}}" rel="license">
 
