Fix Microformats website URL

--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -87,7 +87,7 @@
       <section>
         <h1><a href="/documents/rdfa-lite-20120607.html">抄訳 RDFa Lite 1.1</a></h1>
 
-        <p><a href="https://www.facebook.com/">Facebook</a>の<a href="http://ogp.me/">OGP</a>で利用されていることから急速に普及した<a href="http://www.w3.org/TR/rdfa-syntax/">RDFa</a>のサブセットである<a href="http://www.w3.org/TR/rdfa-lite/">RDFa Lite</a>の抄訳です。スーパーセットであるRDFaを始め、簡便さで一日の長がある<a href="http://microformats.org/about">Microformats</a>、HTML仕様と密接な関わりを持つ<a href="http://www.w3.org/TR/microdata/">Microdata</a>を敵に回してますが、セマンティック王座に最も近い位置にいるんじゃないかと思っています。その王座に意味があるのかは知らないですけど。</p>
+        <p><a href="https://www.facebook.com/">Facebook</a>の<a href="http://ogp.me/">OGP</a>で利用されていることから急速に普及した<a href="http://www.w3.org/TR/rdfa-syntax/">RDFa</a>のサブセットである<a href="http://www.w3.org/TR/rdfa-lite/">RDFa Lite</a>の抄訳です。スーパーセットであるRDFaを始め、簡便さで一日の長がある<a href="http://microformats.org/">Microformats</a>、HTML仕様と密接な関わりを持つ<a href="http://www.w3.org/TR/microdata/">Microdata</a>を敵に回してますが、セマンティック王座に最も近い位置にいるんじゃないかと思っています。その王座に意味があるのかは知らないですけど。</p>
       </section>
 
       <section>
