Move project page to kyonagashima.com

--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -31,6 +31,12 @@
       {{> google-adsense__ad-main}}
 
       <section>
+        <h1><a href="/documents/bulletproof-icon-fonts.html">安全でアクセシブルなアイコン・フォント</a></h1>
+
+        <p>アイコン・フォントの安全な実装についての<a href="http://filamentgroup.com/lab/bulletproof_icon_fonts/">Bulletproof Accessible Icon Fonts</a>という記事の日本語訳です。アクセシビリティ上の問題を含め、巷間のアイコン・フォントの現状の課題とその対処についても触れられているので、アイコン・フォントの実装に大いに役に立ってくれるでしょう。</p>
+      </section>
+
+      <section>
         <h1><a href="/documents/sass-guide-ja.html">Sassの基本</a></h1>
 
         <p><a href="http://sass-lang.com/">Sass</a>がリニューアルされ、このサイトに訳を載せていたチュートリアルが消え、代わりに<a href="http://sass-lang.com/guide">Sass Basics</a>になりました。内容的にはあまり変わらないか多少薄くなっていますが、<code>@extend</code>への言及も追加されたので、日本語訳を作成しました。</p>
