Optimize `meta`, `link`, and metadata order

--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -1,7 +1,6 @@
-<link href="{{feed_url}}" rel="alternate" type="application/rss+xml">
-<link href="https://kyonagashima.com/" rel="author">
-{{^notfound}}<link href="{{canonical}}" rel="canonical">{{/notfound}}
-<link href="{{license_url}}" rel="license">
-
 <link href="/favicon.ico" rel="icon" type="image/x-icon">
 <link href="/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
+<link href="{{canonical}}" rel="canonical">
+<link href="https://kyonagashima.com/" rel="author">
+<link href="{{license_url}}" rel="license">
+<link href="{{feed_url}}" rel="alternate" type="application/rss+xml">
