--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja-JP" itemscope itemtype="http://schema.org/AboutPage http://schema.org/ContactPage">
+<html lang="ja" itemscope itemtype="http://schema.org/AboutPage http://schema.org/ContactPage">
   <head>
     {{> meta}}
 
