--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja-JP" itemscope itemtype="http://schema.org/WebPage">
+<html lang="ja" itemscope itemtype="http://schema.org/WebPage">
   <head>
     {{> meta}}
 
