Update email address

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -111,7 +111,7 @@
           <li><a href="https://twitter.com/hail2unet">Twitterでの@ツイート</a></li>
           <li><a href="https://www.facebook.com/hail2u.net">Facebookでのメッセージ</a></li>
           <li><a href="https://plus.google.com/+Hail2unet">Google+でのハングアウト</a></li>
-          <li><a href="mailto:kyo@hail2u.net">kyo@hail2u.net宛てのメール</a></li>
+          <li><a href="mailto:hail2u@gmail.com">hail2u@gmail.com宛てのメール</a></li>
           <li><a href="https://hail2u.wufoo.com/forms/feedback/">フィードバック・フォームでのメッセージ</a></li>
         </ul>
 
