--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -105,7 +105,7 @@
       <section id="contact">
         <h1>問い合わせ</h1>
 
-        <p>このWebサイト内のコンテンツについて、報告や問い合わせ・クレーム等がある場合は以下のいずれかの手段で連絡してください。</p>
+        <p>このウェブサイト内のコンテンツについて、報告や問い合わせ・クレーム等がある場合は以下のいずれかの手段で連絡してください。</p>
 
         <ul>
           <li><a href="https://twitter.com/hail2unet">Twitterでの@ツイート</a></li>
