Add "Tagline" for home

--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -2,6 +2,8 @@
   {{#home}}<h1 class="logo"><mark><img alt="{{site_title}}" src="{{site_logo}}"></mark></h1>{{/home}}
   {{^home}}<h1 class="logo"><a href="/"><img alt="{{site_title}}" src="{{site_logo}}"></a></h1>{{/home}}
 
+  {{#home}}<p class="tagline">{{{tagline}}}</p>{{/home}}
+
   <nav class="site-navigation">
     <ul>
       {{#weblog}}
