Rename "Main" with "Content"

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -48,7 +48,7 @@
   <body>
     {{> global-header}}
 
-    <main class="main" <?$permalink::is_permalink ne="1"> role="main"</?>>
+    <main class="content" <?$permalink::is_permalink ne="1"> role="main"</?>>
       <?$categories::enabled eq="1">
         <section class="post-list">
           <h1 class="first-heading">“$categories::title”についての記事</h1>
