--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -17,7 +17,7 @@
   <body>
     {{> global-header}}
 
-    <main class="main" role="main">
+    <main class="content" role="main">
       <section>
         <h1 class="first-heading"><a href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></h1>
 
