--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -17,7 +17,7 @@
   <body>
     {{> global-header}}
 
-    <main class="main" role="main">
+    <main class="content" role="main">
       {{#articles}}
         <section id="latest-article" class="topic">
           {{#first}}
