Enable DNS prefetching for AdSense and Analytics

--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -1,5 +1,10 @@
+<link href="//googleads.g.doubleclick.net" rel="dns-prefetch">
+<link href="//pagead2.googlesyndication.com" rel="dns-prefetch">
+<link href="//www.google-analytics.com" rel="dns-prefetch">
+<link href="//www.google.com" rel="dns-prefetch">
+<link href="//www.gstatic.com" rel="dns-prefetch">
 <link href="/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
 <link href="{{canonical}}" rel="canonical">
-<link href="https://kyonagashima.com/" rel="author">
-<link href="{{license_url}}" rel="license">
 <link href="{{feed_url}}" rel="alternate" type="application/rss+xml">
+<link href="{{license_url}}" rel="license">
+<link href="https://kyonagashima.com/" rel="author">
