--- a/styles/debug.css
+++ b/styles/debug.css
@@ -45,6 +45,7 @@
 
 body::after {
   background-color: #096;
+  bottom: .5rem;
   color: #fff;
   content: 'Small';
   display: block;
@@ -52,8 +53,7 @@ body::after {
   line-height: 1;
   padding: .25rem;
   position: fixed;
-  right: .5rem;
-  bottom: .5rem; }
+  right: .5rem; }
   @media (min-width: 39.118rem) {
     body::after {
       content: "Medium: 625.888px"; } }
