--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.63.2
+ * style.css v6.63.3
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -77,8 +77,7 @@ ol, h2 + dl, h2 + figure, h2 + table {
 .section-footer {
   bottom: 100%;
   font-size: 0.811rem;
-  position: absolute;
-  width: 100%; }
+  position: absolute; }
   .section-footer p {
     color: #98928c; }
   .section-footer time {
@@ -86,13 +85,11 @@ ol, h2 + dl, h2 + figure, h2 + table {
   .section-footer .tag {
     color: #3c3330; }
   @media (min-width: 61.844rem) {
-    .section-footer {
-      width: 12.751rem; }
-      .section-footer p {
-        margin-top: 0.391rem; } }
+    .section-footer p {
+      margin-top: 0.391rem; } }
 
 figure, .global-header, .content, .content > article,
-.content > section, .subcontent, .site-search, .global-footer, .footlinks, .post-list ol li, .main .searchbox {
+.content > section, .subcontent, .site-search, .global-footer, .post-list ol li, .content .searchbox {
   position: relative; }
 
 html {
@@ -184,13 +181,15 @@ ol {
 
 dl {
   clear: both; }
-  dl dt {
-    color: #534a47;
-    font-weight: bold; }
-  dl dd {
-    padding-left: 1.618rem; }
   dl dl {
     margin-top: 0; }
+
+dt {
+  color: #534a47;
+  font-weight: bold; }
+
+dd {
+  padding-left: 1.618rem; }
 
 figcaption {
   color: #6a625e;
@@ -344,7 +343,7 @@ th {
 .site-navigation {
   font-size: 0.811rem;
   position: absolute;
-  right: 0;
+  right: 0.809rem;
   text-transform: uppercase;
   top: 0; }
   .site-navigation ul {
@@ -354,7 +353,7 @@ th {
     display: table-cell;
     height: 1.86rem;
     line-height: 1.86rem;
-    padding-right: 0.809rem; }
+    padding-left: 0.809rem; }
   .site-navigation a {
     color: inherit;
     display: inline-block; }
@@ -363,6 +362,9 @@ th {
     border-bottom: 0.125rem solid;
     color: #3598c3;
     padding-bottom: 0.125rem; }
+  @media (min-width: 39.118rem) {
+    .site-navigation li {
+      padding-left: 1.618rem; } }
 
 .content {
   margin-top: -4.236rem; }
@@ -385,11 +387,11 @@ th {
     .site-search {
       position: absolute;
       right: 0.809rem;
-      top: 8.319rem;
+      top: 8.194rem;
       z-index: 1; } }
   @media (min-width: 61.844rem) {
     .site-search {
-      top: 6.701rem; } }
+      top: 6.576rem; } }
 
 .global-footer {
   font-size: 0.811rem;
@@ -401,7 +403,7 @@ th {
 .footlinks li {
   display: table-cell; }
   .footlinks li::after {
-    content: '\a0'; }
+    content: '\a0\a0'; }
   .footlinks li:first-child::after {
     content: ' ·\a0'; }
 @media (min-width: 61.844rem) {
@@ -468,11 +470,13 @@ th {
     max-width: 50%; } }
 .footnote {
   background-image: linear-gradient(to right, #cac5be 0, #cac5be 50%, transparent 50%, transparent 100%);
-  background-position: left 1.618rem;
   background-repeat: repeat-x;
   background-size: 0.5rem 0.063rem;
   font-size: 0.811rem;
+  margin-top: 1.618rem;
   padding-top: 0.618rem; }
+  .footnote > *:first-child {
+    margin-top: 0; }
 
 .full-width {
   margin-left: -0.809rem;
@@ -549,13 +553,13 @@ th {
       text-align: right; } }
 
 .pull-quote {
+  color: #6a625e;
+  font-size: 1.618rem;
   line-height: 1.294;
   margin-left: 1.618rem;
   margin-right: 1.618rem;
   text-align: center; }
   .pull-quote p {
-    color: #6a625e;
-    font-size: 1.618rem;
     margin-top: 1.618rem;
     quotes: '\201c' '\201d'; }
     .pull-quote p::before {
@@ -587,8 +591,8 @@ th {
     text-transform: uppercase; }
 
 .searchbox {
-  max-width: 24rem; }
-  .main .searchbox {
+  max-width: 22.249rem; }
+  .content .searchbox {
     margin-top: 1.618rem; }
   .searchbox .query {
     -moz-box-sizing: border-box;
@@ -597,19 +601,15 @@ th {
     background-color: #fdfcf7;
     border: 0.063rem solid #e1ddd5;
     border-radius: 0;
-    color: #817a75;
-    height: 1.618rem;
-    outline: none;
-    padding: 0 1.743rem 0 0.125rem;
+    color: #3c3330;
+    height: 1.868rem;
+    padding: 0 1.618rem 0 0.25rem;
     width: 100%; }
-    .searchbox .query:focus {
-      border-color: #3598c3;
-      color: #1e1918; }
   .searchbox .button {
     direction: ltr;
     text-indent: -9999px;
-    background-color: #e1ddd5;
-    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22896%22%20height%3D%22896%22%20viewBox%3D%220%200%20896%20896%22%3E%3Cpath%20d%3D%22M384%20192a192%20192%200%200%200-192%20192%20192%20192%200%200%200%20192%20192%20192%20192%200%200%200%2099.766-28.234l156.234%20156.234%2064-64-156.186-156.186a192%20192%200%200%200%2028.186-99.814%20192%20192%200%200%200-192-192zm0%2064a128%20128%200%200%201%20128%20128%20128%20128%200%200%201-128%20128%20128%20128%200%200%201-128-128%20128%20128%200%200%201%20128-128z%22%20fill%3D%22%23fdfcf7%22%2F%3E%3C%2Fsvg%3E");
+    background-color: transparent;
+    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22896%22%20height%3D%22896%22%20viewBox%3D%220%200%20896%20896%22%3E%3Cpath%20d%3D%22M384%20192a192%20192%200%200%200-192%20192%20192%20192%200%200%200%20192%20192%20192%20192%200%200%200%2099.766-28.234l156.234%20156.234%2064-64-156.186-156.186a192%20192%200%200%200%2028.186-99.814%20192%20192%200%200%200-192-192zm0%2064a128%20128%200%200%201%20128%20128%20128%20128%200%200%201-128%20128%20128%20128%200%200%201-128-128%20128%20128%200%200%201%20128-128z%22%20fill%3D%22%23817a75%22%2F%3E%3C%2Fsvg%3E");
     background-position: center top;
     background-repeat: no-repeat;
     background-size: 100% auto;
@@ -619,11 +619,8 @@ th {
     padding: 0;
     position: absolute;
     right: 0;
-    top: 0;
+    top: 0.125rem;
     width: 1.618rem; }
-  .searchbox .query:focus + .button,
-  .searchbox .button:focus {
-    background-color: #3598c3; }
 
 .seealso {
   color: #6a625e;
@@ -644,9 +641,8 @@ th {
     content: '➔ '; }
 
 .sidenote {
-  color: #98928c; }
-  .sidenote p {
-    font-size: 0.811rem; }
+  color: #98928c;
+  font-size: 0.811rem; }
   @media (min-width: 61.844rem) {
     .sidenote {
       top: auto; } }
